<resources>
    <string name="app_name">danhba</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add">ADD</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="g_i">Gọi</string>
    <string name="nhantin">Nhắn tin</string>
    <string name="goi">Gọi</string>
    <string name="goinhan">Gọi hay nhắn tin</string>
</resources>
