<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="danhba.a56th2.baotran.danhba.MainActivity">

    <EditText
        android:hint="@string/name"
       android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/editText4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
    android:hint="@string/number"
    android:layout_height="39dp"
    android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText4"
        android:id="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:onClick="addContact"
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/colorAccent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="0dp"
        android:layout_height="249dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="251dp"
        android:layout_height="69dp"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:checked="true"
            android:id="@+id/rbtnmale"
            android:layout_width="72dp"
            android:layout_height="44dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbtnfemale"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/female" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>
